# AirplayServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  airplay_server.cpp  app-debug.apk
android/example/: build.gradle  gradle.properties
android/example/app/: CMakeLists.txt  build.gradle
android/example/app/src/main/: AndroidManifest.xml
android/example/app/src/main/cpp/: CMakeLists.txt  jni_raop_server.cpp
android/example/app/src/main/java/com/fang/myapplication/: AirPlayServer.java  AirplayApplication.java  DownloadTracker.java  MainActivity.java  NetUtils.java  RaopServer.java
android/example/app/src/main/java/com/fang/myapplication/model/: NALPacket.java
android/example/app/src/main/java/com/fang/myapplication/player/: AVPlayer.java  AudioPlayer.java  AudioTimestampPoller.java  AudioTrackPositionTracker.java  Constant.java  MediaCodecVideoRenderer.java  MediaTimeProvider.java  VideoFrameReleaseTimeHelper.java  VideoPlayer.java
android/example/app/src/main/java/com/fang/myapplication/util/: Assertions.java  Util.java
android/example/app/src/main/res/layout/: activity_main.xml
android/example/app/src/main/res/values/: strings.xml
android/example/gradle/wrapper/: gradle-wrapper.properties
app/src/main/cpp/: jni_raop_server.cpp  log.h
app/src/main/cpp/lib/: CMakeLists.txt  aac_decoder.c  byteutils.c  dnssd.c  dnssd.h  httpd.c  mirror_buffer.c  netutils.c  raop.c  raop.h  raop_buffer.c  raop_handlers.h  raop_rtp.c  raop_rtp_mirror.c  raop_rtp_mirror.h  stream.h  utils.h
app/src/main/cpp/lib/crypto/: os_port.h
app/src/main/cpp/lib/fdk-aac/: CMakeLists.txt
app/src/main/cpp/lib/fdk-aac/libFDK/include/: clz.h
app/src/main/cpp/lib/plist/: bplist.c  plist.c  plist.h  xplist.c
app/src/main/cpp/mDNSResponder/: CMakeLists.txt
app/src/main/java/com/fang/myapplication/: DNSNotify.java  MainActivity.java  NetUtils.java  RaopServer.java
app/src/main/java/com/fang/myapplication/dnssd/: DNSSDBindable.java
app/src/main/java/com/fang/myapplication/model/: NALPacket.java  PCMPacket.java
app/src/main/java/com/fang/myapplication/player/: VideoPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
ios/: iOS_64.cmake  todo.md
lib/: CMakeLists.txt  aac_decoder.c  aac_decoder.h  byteutils.c  byteutils.h  dnssd.c  dnssd.h  mirror_buffer.c  mirror_buffer.h  raop.c  raop.h  raop_buffer.c  raop_buffer.h  raop_handlers.h  raop_rtp.c  raop_rtp.h  raop_rtp_mirror.c  raop_rtp_mirror.h  raop_server.c  raop_server.cpp  raop_server.h  stream.h  threads.h  utils.c  utils.h
lib/crypto/: os_port.h
lib/playfair/: playfair.h
lib/plist/: plist.h
macOS/: CMakeLists.txt  todo.md
win32/: CMakeLists.txt  airplay_server.cpp
